# sudoku

./: CMakeLists.txt  build_win.cmd
src/: Cell.qml  ControlPanel.qml  board.qml  game_model.cpp  game_model.h  main.cpp  main.qml  matrix.cpp  matrix.h  matrix_item.cpp  matrix_item.h  matrix_shuffler.cpp  matrix_shuffler.h  matrix_storage.cpp  matrix_storage.h  qml.qrc
test/: matrix_item_test.cpp  matrix_storage_test.cpp  matrix_test.cpp
